# solar-system-clock

./: CMakeLists.txt  LICENSE.md  README.md
cmake/sdl/: CMakeLists.txt
cmake/spdlog/: CMakeLists.txt
cmake/sunset/: CMakeLists.txt
include/solar-system-clock/: clock.h  orbitring.h  orbits.h  planet.h  starfield.h  sun.h  texture.h  window.h
include/solar-system-clock/layers/: background.h  clockhands.h  layer.h  orbitrings.h  orbits.h  planets.h  rocket.h  solarsystemclock.h  starfield.h  sun.h  sunrisesunset.h
include/solar-system-clock/sprites/: planet.h
include/solarsystemclock/: clock.h  planet.h  solarsystemclock.h  texture.h  window.h
include/solarsystemclock/layers/: background.h  clockhands.h  layer.h  orbitrings.h  planets.h  rocket.h  solarsystemclock.h  starfield.h  sun.h  sunrisesunset.h
include/solarsystemclock/sdl/: error.h  font.h  init.h  renderer.h  surface.h  texture.h  window.h
lib/: CMakeLists.txt  clock.cpp  orbitring.cpp  orbits.cpp  planet.cpp  solarsystemclock.cpp  starfield.cpp  sun.cpp  texture.cpp  window.cpp
lib/layers/: CMakeLists.txt  background.cpp  clockhands.cpp  layer.cpp  orbitrings.cpp  orbits.cpp  planets.cpp  rocket.cpp  solarsystemclock.cpp  starfield.cpp  sun.cpp  sunrisesunset.cpp
lib/sdl/: CMakeLists.txt  error.cpp  font.cpp  init.cpp  renderer.cpp  surface.cpp  texture.cpp  window.cpp
lib/sprites/: planet.cpp
src/: CMakeLists.txt  main.cpp
